--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,5 @@
 <small>
-  {{ .Site.Copyright }} | {{ markdownify .Site.Params.madeWith }}
+  <a href="https://github.com/peterrauscher">GitHub</a> | <a
+    href="https://www.linkedin.com/in/peter-rauscher/">LinkedIn</a> | <a href="https://x.com/peterrauscher">X</a> | <a
+    href="mailto:contact@peterrauscher.com">Email</a>
 </small>
